// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a field with a description 1`] = `
<div
  class="item gridItem size size-12 space-before-0 space-after-0"
>
  <div
    class="field"
  >
    <label
      class="label"
      for=""
    >
      label1
    </label>
    <div
      class="fieldContainer"
    >
      <div
        class="field"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <label
      class="descriptionLabel"
    >
      Small description describing the field
    </label>
    <label
      class="errorLabel"
    />
  </div>
</div>
`;

exports[`Render a field with a error collection 1`] = `
<div
  class="item gridItem size size-12 space-before-0 space-after-0"
>
  <div
    class="field error"
  >
    <label
      class="label"
      for=""
    >
      label1
    </label>
    <div
      class="fieldContainer"
    >
      <div
        class="field"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <label
      class="errorLabel"
    >
      sulu_admin.error_minitems
    </label>
  </div>
</div>
`;

exports[`Render a field with an error 1`] = `
<div
  class="item gridItem size size-12 space-before-0 space-after-0"
>
  <div
    class="field error"
  >
    <label
      class="label"
      for=""
    >
      label1
    </label>
    <div
      class="fieldContainer"
    >
      <div
        class="field"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <label
      class="errorLabel"
    >
      sulu_admin.error_minlength
    </label>
  </div>
</div>
`;

exports[`Render a field without a const error 1`] = `
<div
  class="item gridItem size size-12 space-before-0 space-after-0"
>
  <div
    class="field"
  >
    <label
      class="label"
      for=""
    >
      label1
    </label>
    <div
      class="fieldContainer"
    >
      <div
        class="field"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <label
      class="errorLabel"
    />
  </div>
</div>
`;

exports[`Render a field without a label 1`] = `
<div
  class="item gridItem size size-12 space-before-0 space-after-0"
>
  <div
    class="field"
  >
    <div
      class="fieldContainer"
    >
      <div
        class="field"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <label
      class="errorLabel"
    />
  </div>
</div>
`;

exports[`Render a required field with correct field type 1`] = `
<div
  class="item gridItem size size-12 space-before-0 space-after-0"
>
  <div
    class="field"
  >
    <label
      class="label"
      for=""
    >
      label1 *
    </label>
    <div
      class="fieldContainer"
    >
      <div
        class="field"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <label
      class="errorLabel"
    />
  </div>
</div>
`;

exports[`Render correct label with correct field type 1`] = `
<div
  class="item gridItem size size-12 space-before-0 space-after-0"
>
  <div
    class="field"
  >
    <label
      class="label"
      for=""
    >
      label1
    </label>
    <div
      class="fieldContainer"
    >
      <div
        class="field"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <label
      class="errorLabel"
    />
  </div>
</div>
`;

exports[`Render correct label with correct field type 2`] = `
<div
  class="item gridItem size size-12 space-before-0 space-after-0"
>
  <div
    class="field"
  >
    <label
      class="label"
      for=""
    >
      label2
    </label>
    <div
      class="fieldContainer"
    >
      <div
        class="field"
      >
        <input
          type="date"
        />
      </div>
    </div>
    <label
      class="errorLabel"
    />
  </div>
</div>
`;

exports[`Render field with correct values for grid 1`] = `
<div
  class="item gridItem size size-8 space-before-0 space-after-3"
>
  <div
    class="field"
  >
    <label
      class="label"
      for=""
    >
      label1
    </label>
    <div
      class="fieldContainer"
    >
      <div
        class="field"
      >
        <input
          type="text"
        />
      </div>
    </div>
    <label
      class="errorLabel"
    />
  </div>
</div>
`;
